# srbpf

./: Cargo.toml  README.md
benches/: elf_loader.rs  jit_compile.rs  memory_mapping.rs  vm_execution.rs
examples/: disassemble.rs  to_json.rs
src/: aligned_memory.rs  disassembler.rs  ebpf.rs  elf.rs  error.rs  fuzz.rs  lib.rs  memory_region.rs  program.rs  static_analysis.rs  syscalls.rs  verifier.rs  vm.rs
src/elf_parser/: mod.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
